# demo-backend

./: .env.dev  .env.prod  .gitignore  README.md  TROUBLESHOOT_VERCEL.md  VERCEL_DEPLOYMENT.md  check_database.py  create_migration.py  debug_role.py  diagnose_admin_registration.py  fix_admin_role.py  fix_registration_issue.py  init_database.py  pyproject.toml  quick_test.py  reset_database.py  reset_db_with_admin.py  simple_registration_test.py  start_dev.py  test_admin_registration.py  test_admin_role.py  test_registration_direct.py  test_services.py
alembic/: env.py
alembic/versions/: 648670e44d9e_user.py  83842a38ad1d_request_model.py  af25b2a7c8eb_request_model.py  bb8876066dc9_request_model.py  bf114dcdb45d_user.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  auth.py  repair_requests.py  service_providers.py  services.py
app/core/: config.py  permissions.py  security.py
app/database/: base.py  session.py
app/models/: __init__.py  repair_requests.py  service_providers.py  services.py  user_roles.py  users.py
app/schemas/: repair_request.py  service.py  service_provider.py  user.py
app/users/: dependencies.py  manager.py
